# ChangeLog for net-misc/rdesktop
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/rdesktop/ChangeLog,v 1.130 2011/05/30 17:17:16 voyageur Exp $

*rdesktop-1.7.0-r1 (30 May 2011)

  30 May 2011; Bernard Cafarelli <voyageur@gentoo.org>
  +rdesktop-1.7.0-r1.ebuild, +files/rdesktop-1.7.0-libao_crash.patch:
  EAPI4, fix crash with libao and pulseaudio, thanks everyone in bug #280923

  26 Apr 2011; Bernard Cafarelli <voyageur@gentoo.org>
  -rdesktop-1.6.0-r4.ebuild, -files/rdesktop-1.6.0+pcsc-lite-1.6.6.patch,
  metadata.xml:
  Remove vulnerable version bug #364191

  26 Apr 2011; Kacper Kowalik <xarthisius@gentoo.org> rdesktop-1.7.0.ebuild:
  ppc64 stable wrt #364191

  25 Apr 2011; Raúl Porcel <armin76@gentoo.org> rdesktop-1.7.0.ebuild:
  alpha/ia64/sparc stable wrt #364191

  25 Apr 2011; Markos Chandras <hwoarang@gentoo.org> rdesktop-1.7.0.ebuild:
  Stable on amd64 wrt bug #364191

  24 Apr 2011; Joseph Jezak <josejx@gentoo.org> rdesktop-1.7.0.ebuild:
  Marked ppc stable for bug #364191.

  22 Apr 2011; Bernard Cafarelli <voyageur@gentoo.org> rdesktop-1.7.0.ebuild:
  Update pcsc-lite dependency to stable 1.6.6, bug #364433

  22 Apr 2011; Jeroen Roovers <jer@gentoo.org> rdesktop-1.7.0.ebuild:
  Stable for HPPA (bug #364191).

  21 Apr 2011; Thomas Kahle <tomka@gentoo.org> rdesktop-1.7.0.ebuild:
  x86 stable per bug 364191

*rdesktop-1.7.0 (20 Apr 2011)

  20 Apr 2011; Bernard Cafarelli <voyageur@gentoo.org> -rdesktop-1.6.0.ebuild,
  -rdesktop-1.6.0-r3.ebuild, +rdesktop-1.7.0.ebuild,
  +files/rdesktop-1.7.0+pcsc-lite-1.6.6.patch:
  Version bump with some important bugfixes, update license, drop rdpusb patch.
  Drop previous 1.6.0 ebuilds

  10 Jan 2011; Kacper Kowalik <xarthisius@gentoo.org>
  rdesktop-1.6.0-r4.ebuild:
  ppc64 stable wrt #349835

  01 Jan 2011; Raúl Porcel <armin76@gentoo.org> rdesktop-1.6.0-r4.ebuild:
  alpha/ia64/sparc stable wrt #349561
