@@ -9,14 +9,14 @@ AUX rdesktop-keymap-additional 1568 RMD160 002873aa8c51fd8bb16357a57d90148c9a64c
 AUX rdesktop-keymap-cs 1536 RMD160 bd529b2b5f4adffd4f6914d6067ac23b0edb30da SHA1 d6cdae7769e22fbdf5cc13c4ef447e6ffe5def15 SHA256 91bd229fdb7fb1f0d9e6d0dcf35a429a2c51afa1fb8e2b3414852dc528218b6e
 AUX rdesktop-keymap-sk 1561 RMD160 0f8378b6eadd549ef735d92887d1c51003bbfbdf SHA1 117cf53e7c914f698cdd6cb77881bf2e580afbf4 SHA256 33024ca566d97b5c041d3ca45634d3baa075b456389140bd5991e3927fd37b07
 DIST rdesktop-1.7.0.tar.gz 297239 RMD160 0860d3027b19ebb3b5c9ef91d7c6ba47b730e2f1 SHA1 4f21a8fb2379ce05859e7fb13efa60071125d27f SHA256 3be0420d7f35887ec0f03d3b69b19017b2d4ffaec42261a355b66a50f7b75074
-EBUILD rdesktop-1.7.0-r1.ebuild 2294 RMD160 b8f8f4005b5393953cd02538c3c657e38b4dc130 SHA1 38723532cbb4c5e9452126b209fcc4421edc5b05 SHA256 47bb99e6cf207cb648b4d705c0ec714d8c1ba3bfb0b04f94b5c72c5590e2d94e
-EBUILD rdesktop-1.7.0.ebuild 2288 RMD160 05e1053a9f7f8f7fe5eee36fbd6cfe6b998dea34 SHA1 2e2dfa330390d37c879e709f7cf9eea7c3403c95 SHA256 3cf5fac1f9e6f09d6139dfdd5f15fae2191a9c099e72845c1e716e982b1597f6
-MISC ChangeLog 18030 RMD160 f2e84ed72af3569e47c0993bb4efbbf172e9cc94 SHA1 7590868b84c50c98c22ec11be11acf0728e44fcc SHA256 9c3b43480919558e42a08ec521a66d89d6bd6c9c57e3976373f1c3dac8c3a2e4
+EBUILD rdesktop-1.7.0-r1.ebuild 2314 RMD160 667a8284ff8ddc4b28770745e5b272d45a47fcb0 SHA1 72aefb2c8ae04c621e47f28910e3753da7fb8898 SHA256 da1cb5459ed2bd217f192fafcaa60d0cff99acb0640ad255617a7700838476d7
+EBUILD rdesktop-1.7.0.ebuild 2306 RMD160 659946a3d788e3316dcd29d001be33cbaee49d49 SHA1 49cd4b76a500c77384a01a4289c1a3126481ffc4 SHA256 c4c39d6c74efc20288577645c6577d8a84f0dfd24404d865f92ca6e37445f7f2
+MISC ChangeLog 18206 RMD160 8c03d59eae06701f7f019cd95fe62e24ae22c2b0 SHA1 b6588ef9dce8fe10eb6c88f80e8f7480e1cea28f SHA256 076255056d4eccbe39c447cd6b4ff57eafbbedb7243edd0dfdac59284b0bfef6
 MISC metadata.xml 673 RMD160 fb0202bc00361ddc0d8c8d41a8dc64292ef64bb4 SHA1 d81c6c9c0057b0603c0dce26f290bbe9fbae6e5d SHA256 3a52a75a54e0548b85e4d18d0a3e6eb4ff877b37e4ca2bf5a128ed89abcdce0b
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.18 (GNU/Linux)
 
-iF4EAREIAAYFAk3j0SYACgkQFYEBGcdFJfKO8wD+MR03EE4pisE5YSs3VajGfBU4
-/HQD4M3qzwGwl5J1tScA/j8/phjd+5ML6e9y9FrhqyAxeT5wTflK/1ufL87/FxBP
-=PJ4r
+iF4EAREIAAYFAk5SKWcACgkQFYEBGcdFJfIa4gEAnpcN+BFq5QPpWRpH5GwG/uXV
+0wlilRZLx9rot+yWqb4A/2b0oz6j+zN7GcI7a0B0OihkRX6UMrZinjz3VZtFUlG0
+=XBae
 -----END PGP SIGNATURE-----
